Prod-EU/force-app/main/default/objects/SSIP_Schedule__c/SSIP_Schedule__c.object-meta.xml
<CustomObject>
    <description>Object stores all the schedules related to the rule.</description>
    <label>SSIP Schedule</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSIP Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>