Prod-EU/force-app/main/default/objects/SSIP_Schedule__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Will be referencing the grand parent and will be defaulted at the time of the Schedule creation. Need this for constraining the addressed tied to the customer.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SSIP Schedule</relationshipLabel>
    <relationshipName>SSIP_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>