Prod-EU/force-app/main/default/objects/SSIP_Schedule__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this is a cash Order then this address will be used for Billing else the Primary Billing address tied either to the customer account or the payor account will be chosen based on the order type.</inlineHelpText>
    <label>Changed Billing Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Address__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>SSIP Schedule (Billing Address)</relationshipLabel>
    <relationshipName>SSIP_Schedule1</relationshipName>
    <type>Lookup</type>
</CustomField>