Prod-EU/force-app/main/default/objects/SSIP_Schedule__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>