Prod-EU/force-app/main/default/objects/SSIP_Schedule__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>SSIP Schedule</relationshipLabel>
    <relationshipName>SSIP_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>