Prod-EU/force-app/main/default/objects/SSIP_Schedule__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Order that was generated for this Schedule.</inlineHelpText>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>SSIP Schedule</relationshipLabel>
    <relationshipName>SSIP_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>