Prod-EU/force-app/main/default/objects/SSIP_Schedule__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <formula>IF(  NOT(ISBLANK(Order__c))  , 
 HYPERLINK(&quot;/&quot;+     Order__r.Pricebook2.Id, Order__r.Pricebook2.Name, &quot;_blank&quot;), 
 HYPERLINK(&quot;/&quot;+SSIP_Rule__r.Price_Book__c, SSIP_Rule__r.Price_Book__r.Name, &quot;_blank&quot;)   )</formula>
    <label>Price Book</label>
    <type>Text</type>
</CustomField>