Prod-EU/force-app/main/default/objects/SSIP_Schedule__c/fields/Primary_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Address__c</fullName>
    <formula>Account__r.BillingStreet + &apos;, &apos; + Account__r.BillingCity + &apos;, &apos; + Account__r.BillingPostalCode + &apos;, &apos; + Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Billing Address</label>
    <type>Text</type>
</CustomField>