Prod-EU/force-app/main/default/objects/SSIP_Schedule__c/fields/Primary_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Shipping_Address__c</fullName>
    <formula>Account__r.ShippingStreet + &apos;, &apos; +  Account__r.ShippingCity + &apos;, &apos; +  Account__r.ShippingPostalCode + &apos;, &apos; +  Account__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Shipping Address</label>
    <type>Text</type>
</CustomField>