Prod-EU/force-app/main/default/objects/SSIP_Schedule__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>SSIP_Rule__r.Product__r.Name</formula>
    <inlineHelpText>Product Name tied to the Rule.</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>