Prod-EU/force-app/main/default/objects/SSIP_Schedule__c/fields/Rescheduled_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_Shipment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when the Order will be shipped. If this filed is filled in it takes precedence compared to the Scheduled Date.</inlineHelpText>
    <label>Rescheduled Shipment Date</label>
    <type>Date</type>
</CustomField>