Prod-EU/force-app/main/default/objects/SSIP_Schedule__c/fields/Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when the Order will be shipped.</inlineHelpText>
    <label>Schedule Date</label>
    <type>Date</type>
</CustomField>