Prod-EU/force-app/main/default/objects/SSIP_Schedule__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <description>Shipping Method will be defaulted based on the country default value.</description>
    <inlineHelpText>Value can be overridden only for this schedule. 
Make sure all other product schedules that will be shipped out on the same day for this account is also chosen the corresponding Shipping method.</inlineHelpText>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shipping_Method</valueSetName>
    </valueSet>
</CustomField>