Prod-EU/force-app/main/default/objects/SSIP_Schedule__c/fields/SSIP_Rule__c.field-meta.xml
<CustomField>
    <fullName>SSIP_Rule__c</fullName>
    <description>Master Detail relationship to the parent Rule.</description>
    <label>SSIP Rule</label>
    <referenceTo>SSIP_Rule__c</referenceTo>
    <relationshipLabel>SSIP Schedule</relationshipLabel>
    <relationshipName>SSIP_Schedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>