Prod-EU/force-app/main/default/objects/SSIP_Schedule__c/fields/Try_to_Create_Order__c.field-meta.xml
<CustomField>
    <fullName>Try_to_Create_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Try to Create Order</label>
    <type>Checkbox</type>
</CustomField>